--- a/style.css
+++ b/style.css
@@ -56,9 +56,10 @@ body{
 .imagemresultado{
     background-image: url(estrela.png);
     background-repeat: no-repeat;
-    width: 7%;
+    width: 6%;
     height: 110px;
-
+    padding-left: 10px;
+    padding-right: 10px;
     display: inline-flex;
     align-items: center;
     justify-content: space-around;
